# Last-and-end

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/context/: project-brief.md
docs/data/: reporting.md  retention.md  storage-notes.md
docs/engineering/: adapter-pattern.md  architecture.md  error-model.md  testing.md
docs/ops/: cli-plan.md  incident-notes.md  runbook.md  scheduling.md
docs/product/: mvp.md  notification-scope.md  report-examples.md  status-language.md  use-cases.md
docs/security/: data-handling.md  secret-policy.md
docs/strategy/: positioning.md  roadmap.md
src/last_and_end/: __init__.py  adapters.py  availability.py  checker.py  classifier.py  cli.py  config.py  config_loader.py  decision.py  endpoint_set.py  errors.py  fixtures.py  health_score.py  history.py  incidents.py  markdown.py  models.py  noop_adapter.py  notifications.py  policy.py  render.py  report.py  runner.py  scheduler.py  serialize.py  status.py  store.py  (+4 more)
tests/: test_availability.py  test_checker.py  test_classifier.py  test_cli.py  test_config_loader.py  test_decision.py  test_endpoint_set.py  test_errors.py  test_fixtures.py  test_health_score.py  test_history.py  test_incidents.py  test_markdown.py  test_models.py  test_noop_adapter.py  test_notifications.py  test_policy.py  test_render.py  test_report.py  test_runner.py  test_scheduler.py  test_serialize.py  test_store.py  test_summary.py  test_thresholds.py  test_window.py
